--- a/syslinux/archiso_head.cfg
+++ b/syslinux/archiso_head.cfg
@@ -1,7 +1,7 @@
 SERIAL 0 38400
 UI boot/syslinux/vesamenu.c32
-MENU TITLE Arch Linux
-MENU BACKGROUND boot/syslinux/splash.png
+MENU TITLE :: booty ::
+MENU BACKGROUND #00000000
 
 MENU WIDTH 78
 MENU MARGIN 4
@@ -15,7 +15,7 @@ MENU HELPMSGENDROW 29
 # Refer to http://syslinux.zytor.com/wiki/index.php/Doc/menu
 
 MENU COLOR border       30;44   #40ffffff #a0000000 std
-MENU COLOR title        1;36;44 #9033ccff #a0000000 std
+MENU COLOR title        1;36;44 #9033cc00 #a0000000 std
 MENU COLOR sel          7;37;40 #e0ffffff #20ffffff all
 MENU COLOR unsel        37;44   #50ffffff #a0000000 std
 MENU COLOR help         37;40   #c0ffffff #a0000000 std
