--- a/syslinux/archiso_sys.cfg
+++ b/syslinux/archiso_sys.cfg
@@ -2,12 +2,12 @@ INCLUDE boot/syslinux/archiso_head.cfg
 
 LABEL arch64
 TEXT HELP
-Boot the Arch Linux (x86_64) live medium.
+Boot the booty (x86_64) live medium.
 It allows you to install Arch Linux or perform system maintenance.
 ENDTEXT
-MENU LABEL Boot Arch Linux (x86_64)
+MENU LABEL Boot booty (x86_64)
 LINUX boot/x86_64/vmlinuz
 INITRD boot/intel_ucode.img,boot/x86_64/archiso.img
-APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
+APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=2G
 
 INCLUDE boot/syslinux/archiso_tail.cfg
