--- a/syslinux/archiso_sys.cfg
+++ b/syslinux/archiso_sys.cfg
@@ -10,4 +10,6 @@ LINUX boot/x86_64/vmlinuz
 INITRD boot/intel_ucode.img,boot/x86_64/archiso.img
 APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% cow_spacesize=2G
 
+TIMEOUT 300
+
 INCLUDE boot/syslinux/archiso_tail.cfg
