--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,8 @@ before_install:
 script:
 # prevent travis from killing the job
 - ci/keepalive.sh &
-#- docker run --privileged --rm -v `pwd`:/booty booty-builder sh -c 'mkdir repo && chown nobody. repo'
-#- docker run --privileged --rm -v `pwd`:/booty booty-builder sudo -u nobody ./build.sh -p
+- docker run --privileged --rm -v `pwd`:/booty booty-builder sh -c 'mkdir repo && chown nobody. repo'
+- docker run --privileged --rm -v `pwd`:/booty booty-builder sudo -u nobody ./build.sh -p
 # -v /dev:/dev is needed as a workaround on travis
 - docker run --privileged --rm -v `pwd`:/booty -v /dev:/dev booty-builder ./build.sh -v
 - ls -lah out/
